--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
     <!-- Home Section -->
     <section id="home" class="full-screen">
-        <a href="static/CV23_ArchitSrivastava.pdf" class="download-button" download>Resume</a>
+<!--         <a href="static/CV23_ArchitSrivastava.pdf" class="download-button" download>Resume</a> -->
+        <a href="static/CV23_ArchitSrivastava.pdf" class="download-button" download target="_blank">Resume</a>
         <div class="centered-content">
             <h1>Greetings!!!!</h1>
             <p>Welcome to my tech realm! I'm <span class="name">Archit R Srivastava</span>,a passionate tech enthusiast
