--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </li>
                 <li>
                     <h3>GATE 2023 QUALIFIED (Computer Science)</h3>
-                    <p>🏆 GATE Qualified in Computer Science.</p>
+                    <p>🏆 GATE Qualified in Computer Science & Information Technology.</p>
                 </li>
                 <li>
                     <h3>Intermediate (2018-19)</h3>
